--- a/_posts/2011-12-31-thehours.md
+++ b/_posts/2011-12-31-thehours.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title:  "always... the hours"
 date:   2017-11-17 16:16:01 +0800
 categories: movie life
@@ -8,7 +8,7 @@ permalink: blog/:year:month:day-thehours.html
 
 ![Virginia&Leonerd](/assets/post-images/the hours/Virginia&Leonerd.jpg)
 
-她选择了离去，留下一封短信
+```
 > Dear Leonard... 　　
 > to look life in the face, 　　
 > always... to look life in the face... 　　
@@ -20,3 +20,4 @@ permalink: blog/:year:month:day-thehours.html
 > always the years between us 　　
 > always the years...   always the love... 　　
 > always the hours...
+```
