--- a/_posts/2011-12-31-thehours.md
+++ b/_posts/2011-12-31-thehours.md
@@ -2,7 +2,7 @@
 layout: page
 title:  "always... the hours"
 date:   2017-11-17 16:16:01 +0800
-categories: movie life
+category: movie life
 permalink: blog/:year:month:day-thehours.html
 ---
 
