--- a/_posts/2018-04-15-mitmproxy2.md
+++ b/_posts/2018-04-15-mitmproxy2.md
@@ -3,7 +3,7 @@ layout: page
 title:  "mitmproxy折腾续"
 date:   2018-04-15 16:16:01 +0800
 category: tech api
-permalink: /blog/:year:month:mitmproxy2.html
+permalink: mitmproxy2.html
 ---
 
 让我先吐槽一下 MacBook，键盘我真想给砸了！！！  
@@ -13,7 +13,8 @@ permalink: /blog/:year:month:mitmproxy2.html
 主要是 Charles 很卡，我又在Mac上下载了 `mitmproxy`,   
 搞定https立刻卸载Charles
 
-主要是重新过了一下文档，先按照文档在手机上下载安装了证书。然后`mitmproxy`在启动的时候加一个参数
+主要是重新过了一下文档，先按照文档在手机上下载安装了证书。  
+然后`mitmproxy`在启动的时候加一个参数
 ```
 mitmproxy --set upstream_cert=false
 ```
