--- a/_posts/2017-12-31-thehours.md
+++ b/_posts/2017-12-31-thehours.md
@@ -3,7 +3,7 @@ layout: page
 title:  "always... the hours"
 date:   2017-11-17 16:16:01 +0800
 category: movie life
-permalink: blog/:year:month:day-thehours.html
+permalink: thehours.html
 ---
 
 ![Virginia&Leonerd](/assets/post-images/the hours/Virginia&Leonerd.jpg)
