--- a/_posts/2018-05-07-algorithm1.md
+++ b/_posts/2018-05-07-algorithm1.md
@@ -8,6 +8,15 @@ permalink: algorithm1.html
 
 ### 问题的起源
 iOS平台充值，仅提供有限的几种面额，用户购买商品的时候，支付价格不确定，大概率不在这几种可用面额范围内。  
-所以需要对这几种面额的币种做组合，优化用户支付体验。具体效果如下：
-
+所以需要对这几种面额的币种做组合，优化用户支付体验。大概效果如下：
 ![design](/assets/post-images/algorithm/result.png)
+
+### 几个要点
+1. 只有几个固定金额的币种
+2. 每种币每次最多购买10个
+3. 不希望购买的次数超过三次
+4. 3000 以上的金额不用考虑
+
+### 动态规划做法
+
+### 贪心算法做法
