--- a/_posts/2018-10-09-phpdbg.md
+++ b/_posts/2018-10-09-phpdbg.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title:  "phpdbg使用小记"
+title:  "phpdbg调试小记"
 date:   2018-10-09 15:18:00 +0800
 category: tech php
 permalink: phpdbg.html
@@ -43,6 +43,7 @@ To get help using phpdbg type "help" and press enter
 ```
 #### 2. 设置断点
 > 最简单的设置断点方法 b + 行号L (在当前文件L行设置一个断点，b是break缩写)  
+> ⚠️断点行不能是空行  
 
 ```
 prompt> b 17
